style: 💄 fix layout issues

--- a/app/styles/themes/default/components/_container.sass
+++ b/app/styles/themes/default/components/_container.sass
@@ -1,5 +1,6 @@
 .container
   @extend .container
+  flex-grow: 0
   padding: $size-4
   width: 100%
 
